fix(comp:tree): lines are not aligned

--- a/packages/components/tree/style/themes/default.variable.less
+++ b/packages/components/tree/style/themes/default.variable.less
@@ -17,9 +17,12 @@
 @tree-node-padding-vertical: (@spacing-sm / 2);
 
 @tree-node-content-height: @height-sm;
+@tree-node-content-padding: 0 @spacing-sm 0 @spacing-xs;
 @tree-node-content-label-padding: 0 @spacing-xs;
 @tree-node-content-label-highlight-color: @color-primary;
 
-@tree-node-checkbox-margin: 0 @spacing-xs 0 (@tree-node-content-height / 2 - @tree-icon-font-size / 2);
+@tree-node-checkbox-margin: 0 @spacing-xs 0 (@tree-node-icon-width / 2 - @tree-icon-font-size / 2);
+
+@tree-node-icon-width: @height-sm;
 
 @tree-expand-icon-color: @color-graphite;
