--- a/packages/components/tree/style/themes/seer.variable.less
+++ b/packages/components/tree/style/themes/seer.variable.less
@@ -9,4 +9,4 @@
 @tree-node-selected-color: @color-primary;
 @tree-node-selected-background-color: @color-white;
 
-@tree-node-padding-vertical: 0;
+@tree-node-padding-vertical: 0px;
